--- a/ui/style.css
+++ b/ui/style.css
@@ -1,15 +1,15 @@
 body {
     font-family: sans-serif;
     background-color: lightgrey;
-    margin-top: 75px;
+    margin-top: 100px;
 }
 
 .center {
-    text-align: center;
+    text-align: right;
 }
 
 .text-big {
-    font-size: 300%;
+    font-size: 100%;
 }
 
 .bold {
